--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -8,14 +8,9 @@
             </a>
             <ul id="operations" class="collapse">
                 <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa fa-users"></i> Gestión trabajadores</a></li>
-            </ul>
-            <ul id="operations" class="collapse">
+                <li><a href="@Url.Action("Index", "TrabajadorCategoriaPlanilla")"><i class="fa fa-users"></i> Asignación de planillas</a></li>
                 <li><a href="@Url.Action("Index", "ValoresExternos")"><i class="fa fa-cloud-upload"></i> Cargar información externa</a></li>
-            </ul>
-            <ul id="operations" class="collapse">
                 <li><a href="@Url.Action("Mantenimiento", "ValoresExternos")"><i class="fa bi-stack"></i> Mantenimiento información externa</a></li>
-            </ul>
-            <ul id="operations" class="collapse">
                 <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-table"></i> Generar planillas</a></li>
             </ul>
         </li>
