Versión para pruebas.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -49,9 +49,9 @@
 
     <div class="card">
         <div class="card-header">
-            <span class="h4">Plantillas</span>
+            <span class="h4">Planillas</span>
             <a href="@Url.Action("Nuevo", "PlantillaPlanilla")" class="btn btn-primary pull-right modal-link">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva Plantilla
+                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva Planilla
             </a>
         </div>
         <div class="card-body">
