--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -34,7 +34,7 @@
                 <li><a href="@Url.Action("Index", "Dependencias")"><i class="fa bi-building"></i> Dependencias</a></li>
                 @*<li><a href="@Url.Action("Index", "GruposTrabajo")"><i class="fa fa-users"></i> Grupos de trabajo</a></li>*@
                 <li><a href="@Url.Action("Index", "Periodos")"><i class="fa bi-stack"></i> Periodos</a></li>
-                <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Plantilla</a></li>
+                <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Planillas</a></li>
                 <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-user-circle"></i> Usuarios</a></li>
             </ul>
         </li>
@@ -43,7 +43,7 @@
                 <i class="fa fa-fw fa-life-ring"></i> Ayuda<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="help" class="collapse">
-                <li><a href="@Url.Action("Manual", "HelpCenter")"><i class="fa fa-book"></i> Manual de usuario</a></li>
+                <li><a href="@Url.Action("ManualUsuario", "General")"><i class="fa fa-book"></i> Manual de usuario</a></li>
             </ul>
         </li>
     </ul>
