--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -40,7 +40,15 @@
             }
             <div class="form-group" id="error-matricula"></div>
         </div>
+        <div class="card-body">
+            <ul>
+                <li><a href="@Url.Action("DescargarFormatoCargaInformacionExterna", "General")">Descargar Formato para registrar información externa [.xlsx]</a></li>
+                <li><a href="@Url.Action("DescargarCatalogoFormatoCargaInformacionExterna", "General")">Descargar Catálogo de Datos para registrar información externa [.xlsx]</a></li>
+            </ul>
+        </div>
     </div>
+
+    
 
     <div class="card mb-4">
         <div class="card-header">
