--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -34,7 +34,7 @@
                             <th>Vínculo</th>
                             <th>Estado</th>
                             <th></th>
-                            <th></th>
+                            @*<th></th>*@
                         </tr>
                     </thead>
                     <tfoot>
@@ -49,7 +49,7 @@
                             <th>Vínculo</th>
                             <th>Estado</th>
                             <th></th>
-                            <th></th>
+                            @*<th></th>*@
                         </tr>
                     </tfoot>
                 </table>
@@ -84,20 +84,20 @@
                     { data: 'regimenDesc' },
                     { data: 'vinculoDesc' },
                     { data: 'estadoDesc' },
-                    { data: 'trabajadorID' },
+                    /*{ data: 'trabajadorID' },*/
                     { data: 'trabajadorID' }
                 ],
                 columnDefs: [
                     {
-                        targets: -2,
+                        targets: -1,
                         className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="modal-link-lg" href="@Url.Action("Editar", "Trabajadores")/${data}` +
                                 '" title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>';
                         }
-                    },
-                    {
+                    }
+                    @*{
                         targets: -1,
                         className: "text-center",
                         orderable: false,
@@ -105,7 +105,7 @@
                             return `<a class="modal-link-xl" href="@Url.Action("CategoriasPlanillaAsignadas", "TrabajadorCategoriaPlanilla")/${data}` +
                                 '" title="Agregar a otra planilla"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>';
                         }
-                    }
+                    }*@
                 ],
                 bStateSave: true,
                 bDestroy: true,
