--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -8,7 +8,7 @@
             </a>
             <ul id="operations" class="collapse">
                 <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa fa-users"></i> Gestión trabajadores</a></li>
-                <li><a href="@Url.Action("Index", "TrabajadorCategoriaPlanilla")"><i class="fa fa-users"></i> Asignación de planillas</a></li>
+                @*<li><a href="@Url.Action("Index", "TrabajadorCategoriaPlanilla")"><i class="fa fa-users"></i> Asignación de planillas</a></li>*@
                 <li><a href="@Url.Action("Index", "ValoresExternos")"><i class="fa fa-cloud-upload"></i> Cargar información externa</a></li>
                 <li><a href="@Url.Action("Mantenimiento", "ValoresExternos")"><i class="fa bi-stack"></i> Mantenimiento información externa</a></li>
                 <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-table"></i> Generar planillas</a></li>
@@ -32,7 +32,7 @@
             <ul id="configurations" class="collapse">
                 <li><a href="@Url.Action("Index", "DepActividadesMetas")"><i class="fa fa-flag"></i> Actividades y metas</a></li>
                 <li><a href="@Url.Action("Index", "Dependencias")"><i class="fa bi-building"></i> Dependencias</a></li>
-                <li><a href="@Url.Action("Index", "GruposTrabajo")"><i class="fa fa-users"></i> Grupos de trabajo</a></li>
+                @*<li><a href="@Url.Action("Index", "GruposTrabajo")"><i class="fa fa-users"></i> Grupos de trabajo</a></li>*@
                 <li><a href="@Url.Action("Index", "Periodos")"><i class="fa bi-stack"></i> Periodos</a></li>
                 <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Planillas</a></li>
                 <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-user-circle"></i> Usuarios</a></li>
