--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
@@ -212,6 +212,8 @@
 </div>
 
 <script type="text/javascript">
+    modalActivo = "modal-mantenimiento-trabajador";
+
     $(document).ready(function () {
         $('.select-filter-modal').select2({
             theme: 'bootstrap4',
