--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -23,22 +23,20 @@
             @using (Html.BeginForm("ObtenerInformacionArchivo", "ValoresExternos", FormMethod.Post,
                 new { id = "form-upload", enctype = "multipart/form-data", @class = "form-inline" }))
             {
-                <form id="form-upload" name="form-upload" class="form-inline" enctype="multipart/form-data">
-                    <div class="form-group mr-2">
-                        <label class="control-label" for="inputFile">Seleccione archivo</label>
-                        <input type="file" class="form-control-file" id="inputFile" name="inputFile" />
+                <div class="form-group mr-2">
+                    <label class="control-label" for="inputFile">Seleccione archivo</label>
+                    <input type="file" class="form-control-file" id="inputFile" name="inputFile" />
+                </div>
+                <div class="form-group mr-2">
+                    @Html.AntiForgeryToken()
+                    <button type="submit" id="btnLeerArchivo" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Leer archivo</button>
+                    <div id="wating-section" class="d-none">
+                        <strong>Cargando información...</strong>
+                        <div class="spinner-border ml-auto text-primary" role="status" aria-hidden="true"></div>
                     </div>
-                    <div class="form-group mr-2">
-                        @Html.AntiForgeryToken()
-                        <button type="submit" id="btnLeerArchivo" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Leer archivo</button>
-                        <div id="wating-section" class="d-none">
-                            <strong>Cargando información...</strong>
-                            <div class="spinner-border ml-auto text-primary" role="status" aria-hidden="true"></div>
-                        </div>
-                    </div>
-                </form>
+                </div>
             }
-            <div class="form-group" id="error-matricula"></div>
+            <div class="form-group" id="error-archivo"></div>
         </div>
         <div class="card-body">
             <ul>
@@ -128,7 +126,7 @@
                 allowedFileExtensions: ["xls", "xlsx"],
                 showPreview: false,
                 showUpload: false,
-                elErrorContainer: '#error-matricula'
+                elErrorContainer: '#error-archivo'
             });
 
             $('#inputFile').on('change filecleared', function (event) {
